Fix menu drawer button visibility
This regressed while factoring out the lists view into a separate
component.

--- a/xwperf_contacts/contacts-list-view.css
+++ b/xwperf_contacts/contacts-list-view.css
@@ -7,7 +7,7 @@
   visibility: hidden;
 }
 
-[narrow] #sideMenuButton {
+:host([narrow]) #sideMenuButton {
   visibility: visible;
 }
 
